--- a/src/global.css
+++ b/src/global.css
@@ -3,24 +3,28 @@
 	src: url('/fonts/ATNameSansDisplayTrial-BlackItalic.otf') format('opentype');
 	font-style: italic;
 	font-weight: 700;
+	font-display: swap;
 }
 @font-face {
 	font-family: 'ATNameSansDisplayTrial-Black';
 	src: url('/fonts/ATNameSansDisplayTrial-Black.otf') format('opentype');
 	font-style: normal;
 	font-weight: 700;
+	font-display: swap;
 }
 @font-face {
 	font-family: 'ATNameSansDisplayTrial-Italic';
 	src: url('/fonts/ATNameSansDisplayTrial-Italic.otf') format('opentype');
 	font-style: italic;
 	font-weight: 400;
+	font-display: swap;
 }
 @font-face {
 	font-family: 'ATNameSansDisplayTrial-Regular';
 	src: url('/fonts/ATNameSansDisplayTrial-Regular.otf') format('opentype');
 	font-style: normal;
 	font-weight: 400;
+	font-display: swap;
 }
 
 /* Define default (light mode) colors */
@@ -48,6 +52,12 @@
 /* Apply the colors to the body and other elements */
 body {
 	background-color: var(--background-color);
+	color: var(--text-color);
+	font-family: var(--text-font-family);
+	font-size: var(--text-font-size);
+}
+
+svg text {
 	color: var(--text-color);
 	font-family: var(--text-font-family);
 	font-size: var(--text-font-size);
