--- a/src/global.css
+++ b/src/global.css
@@ -60,12 +60,16 @@ body {
 	color: var(--text-color);
 	font-family: var(--text-font-family);
 	font-size: var(--text-font-size);
+	font-weight: 400;
+	font-style: normal;
 }
 
 svg text {
 	color: var(--text-color);
 	font-family: var(--text-font-family);
 	font-size: var(--text-font-size);
+	font-weight: 400;
+	font-style: normal;
 }
 
 h1,
@@ -75,6 +79,8 @@ h4,
 h5,
 h6 {
 	font-family: var(--heading-font-family);
+	font-weight: 900;
+	font-style: italic;
 }
 
 h1 {
