--- a/src/modern-normalize.css
+++ b/src/modern-normalize.css
@@ -1,274 +1,257 @@
 /*! modern-normalize v2.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
+@layer reset {
+	/**
+	Use a better box model (opinionated).
+	*/
 
-/*
-Document
-========
-*/
+	*,
+	::before,
+	::after {
+		box-sizing: border-box;
+	}
 
-/**
-Use a better box model (opinionated).
-*/
+	html {
+		/* Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3) */
+		font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+			'Segoe UI Emoji';
+		line-height: 1.15; /* 1. Correct the line height in all browsers. */
+		-webkit-text-size-adjust: 100%; /* 2. Prevent adjustments of font size after orientation changes in iOS. */
+		-moz-tab-size: 4; /* 3. Use a more readable tab size (opinionated). */
+		tab-size: 4; /* 3 */
+	}
 
-*,
-::before,
-::after {
-	box-sizing: border-box;
-}
+	/*
+	Sections
+	========
+	*/
 
-html {
-	/* Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3) */
-	font-family:
-		system-ui,
-		'Segoe UI',
-		Roboto,
-		Helvetica,
-		Arial,
-		sans-serif,
-		'Apple Color Emoji',
-		'Segoe UI Emoji';
-	line-height: 1.15; /* 1. Correct the line height in all browsers. */
-	-webkit-text-size-adjust: 100%; /* 2. Prevent adjustments of font size after orientation changes in iOS. */
-	-moz-tab-size: 4; /* 3. Use a more readable tab size (opinionated). */
-	tab-size: 4; /* 3 */
-}
+	body {
+		margin: 0; /* Remove the margin in all browsers. */
+	}
 
-/*
-Sections
-========
-*/
+	/*
+	Grouping content
+	================
+	*/
 
-body {
-	margin: 0; /* Remove the margin in all browsers. */
-}
+	/**
+	1. Add the correct height in Firefox.
+	2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
+	*/
 
-/*
-Grouping content
-================
-*/
+	hr {
+		height: 0; /* 1 */
+		color: inherit; /* 2 */
+	}
 
-/**
-1. Add the correct height in Firefox.
-2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
-*/
+	/*
+	Text-level semantics
+	====================
+	*/
 
-hr {
-	height: 0; /* 1 */
-	color: inherit; /* 2 */
-}
+	/**
+	Add the correct text decoration in Chrome, Edge, and Safari.
+	*/
 
-/*
-Text-level semantics
-====================
-*/
+	abbr[title] {
+		text-decoration: underline dotted;
+	}
 
-/**
-Add the correct text decoration in Chrome, Edge, and Safari.
-*/
+	/**
+	Add the correct font weight in Edge and Safari.
+	*/
 
-abbr[title] {
-	text-decoration: underline dotted;
-}
+	b,
+	strong {
+		font-weight: bolder;
+	}
 
-/**
-Add the correct font weight in Edge and Safari.
-*/
+	/**
+	1. Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3)
+	2. Correct the odd 'em' font sizing in all browsers.
+	*/
 
-b,
-strong {
-	font-weight: bolder;
-}
+	code,
+	kbd,
+	samp,
+	pre {
+		font-family: ui-monospace, SFMono-Regular, Consolas, 'Liberation Mono', Menlo, monospace; /* 1 */
+		font-size: 1em; /* 2 */
+	}
 
-/**
-1. Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3)
-2. Correct the odd 'em' font sizing in all browsers.
-*/
+	/**
+	Add the correct font size in all browsers.
+	*/
 
-code,
-kbd,
-samp,
-pre {
-	font-family:
-		ui-monospace,
-		SFMono-Regular,
-		Consolas,
-		'Liberation Mono',
-		Menlo,
-		monospace; /* 1 */
-	font-size: 1em; /* 2 */
-}
+	small {
+		font-size: 80%;
+	}
 
-/**
-Add the correct font size in all browsers.
-*/
+	/**
+	Prevent 'sub' and 'sup' elements from affecting the line height in all browsers.
+	*/
 
-small {
-	font-size: 80%;
-}
+	sub,
+	sup {
+		font-size: 75%;
+		line-height: 0;
+		position: relative;
+		vertical-align: baseline;
+	}
 
-/**
-Prevent 'sub' and 'sup' elements from affecting the line height in all browsers.
-*/
+	sub {
+		bottom: -0.25em;
+	}
 
-sub,
-sup {
-	font-size: 75%;
-	line-height: 0;
-	position: relative;
-	vertical-align: baseline;
-}
+	sup {
+		top: -0.5em;
+	}
 
-sub {
-	bottom: -0.25em;
-}
+	/*
+	Tabular data
+	============
+	*/
 
-sup {
-	top: -0.5em;
-}
+	/**
+	1. Remove text indentation from table contents in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
+	2. Correct table border color inheritance in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
+	*/
 
-/*
-Tabular data
-============
-*/
+	table {
+		text-indent: 0; /* 1 */
+		border-color: inherit; /* 2 */
+	}
 
-/**
-1. Remove text indentation from table contents in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
-2. Correct table border color inheritance in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
-*/
+	/*
+	Forms
+	=====
+	*/
 
-table {
-	text-indent: 0; /* 1 */
-	border-color: inherit; /* 2 */
-}
+	/**
+	1. Change the font styles in all browsers.
+	2. Remove the margin in Firefox and Safari.
+	*/
 
-/*
-Forms
-=====
-*/
+	button,
+	input,
+	optgroup,
+	select,
+	textarea {
+		font-family: inherit; /* 1 */
+		font-size: 100%; /* 1 */
+		line-height: 1.15; /* 1 */
+		margin: 0; /* 2 */
+	}
 
-/**
-1. Change the font styles in all browsers.
-2. Remove the margin in Firefox and Safari.
-*/
+	/**
+	Remove the inheritance of text transform in Edge and Firefox.
+	*/
 
-button,
-input,
-optgroup,
-select,
-textarea {
-	font-family: inherit; /* 1 */
-	font-size: 100%; /* 1 */
-	line-height: 1.15; /* 1 */
-	margin: 0; /* 2 */
-}
+	button,
+	select {
+		text-transform: none;
+	}
 
-/**
-Remove the inheritance of text transform in Edge and Firefox.
-*/
+	/**
+	Correct the inability to style clickable types in iOS and Safari.
+	*/
 
-button,
-select {
-	text-transform: none;
-}
+	button,
+	[type='button'],
+	[type='reset'],
+	[type='submit'] {
+		-webkit-appearance: button;
+	}
 
-/**
-Correct the inability to style clickable types in iOS and Safari.
-*/
+	/**
+	Remove the inner border and padding in Firefox.
+	*/
 
-button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
-	-webkit-appearance: button;
-}
+	::-moz-focus-inner {
+		border-style: none;
+		padding: 0;
+	}
 
-/**
-Remove the inner border and padding in Firefox.
-*/
+	/**
+	Restore the focus styles unset by the previous rule.
+	*/
 
-::-moz-focus-inner {
-	border-style: none;
-	padding: 0;
-}
+	:-moz-focusring {
+		outline: 1px dotted ButtonText;
+	}
 
-/**
-Restore the focus styles unset by the previous rule.
-*/
+	/**
+	Remove the additional ':invalid' styles in Firefox.
+	See: https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737
+	*/
 
-:-moz-focusring {
-	outline: 1px dotted ButtonText;
-}
+	:-moz-ui-invalid {
+		box-shadow: none;
+	}
 
-/**
-Remove the additional ':invalid' styles in Firefox.
-See: https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737
-*/
+	/**
+	Remove the padding so developers are not caught out when they zero out 'fieldset' elements in all browsers.
+	*/
 
-:-moz-ui-invalid {
-	box-shadow: none;
-}
+	legend {
+		padding: 0;
+	}
 
-/**
-Remove the padding so developers are not caught out when they zero out 'fieldset' elements in all browsers.
-*/
+	/**
+	Add the correct vertical alignment in Chrome and Firefox.
+	*/
 
-legend {
-	padding: 0;
-}
+	progress {
+		vertical-align: baseline;
+	}
 
-/**
-Add the correct vertical alignment in Chrome and Firefox.
-*/
+	/**
+	Correct the cursor style of increment and decrement buttons in Safari.
+	*/
 
-progress {
-	vertical-align: baseline;
-}
+	::-webkit-inner-spin-button,
+	::-webkit-outer-spin-button {
+		height: auto;
+	}
 
-/**
-Correct the cursor style of increment and decrement buttons in Safari.
-*/
+	/**
+	1. Correct the odd appearance in Chrome and Safari.
+	2. Correct the outline style in Safari.
+	*/
 
-::-webkit-inner-spin-button,
-::-webkit-outer-spin-button {
-	height: auto;
-}
+	[type='search'] {
+		-webkit-appearance: textfield; /* 1 */
+		outline-offset: -2px; /* 2 */
+	}
 
-/**
-1. Correct the odd appearance in Chrome and Safari.
-2. Correct the outline style in Safari.
-*/
+	/**
+	Remove the inner padding in Chrome and Safari on macOS.
+	*/
 
-[type='search'] {
-	-webkit-appearance: textfield; /* 1 */
-	outline-offset: -2px; /* 2 */
-}
+	::-webkit-search-decoration {
+		-webkit-appearance: none;
+	}
 
-/**
-Remove the inner padding in Chrome and Safari on macOS.
-*/
+	/**
+	1. Correct the inability to style clickable types in iOS and Safari.
+	2. Change font properties to 'inherit' in Safari.
+	*/
 
-::-webkit-search-decoration {
-	-webkit-appearance: none;
-}
+	::-webkit-file-upload-button {
+		-webkit-appearance: button; /* 1 */
+		font: inherit; /* 2 */
+	}
 
-/**
-1. Correct the inability to style clickable types in iOS and Safari.
-2. Change font properties to 'inherit' in Safari.
-*/
+	/*
+	Interactive
+	===========
+	*/
 
-::-webkit-file-upload-button {
-	-webkit-appearance: button; /* 1 */
-	font: inherit; /* 2 */
-}
+	/*
+	Add the correct display in Chrome and Safari.
+	*/
 
-/*
-Interactive
-===========
-*/
-
-/*
-Add the correct display in Chrome and Safari.
-*/
-
-summary {
-	display: list-item;
+	summary {
+		display: list-item;
+	}
 }
