--- a/src/global.css
+++ b/src/global.css
@@ -53,8 +53,7 @@
 		}
 	}
 
-	body {
-		background-color: var(--background-color);
+	body, svg text {
 		color: var(--text-color);
 		font-family: var(--text-font-family);
 		font-size: var(--text-font-size);
@@ -62,12 +61,8 @@
 		font-style: normal;
 	}
 
-	svg text {
-		color: var(--text-color);
-		font-family: var(--text-font-family);
-		font-size: var(--text-font-size);
-		font-weight: 400;
-		font-style: normal;
+	body {
+		background-color: var(--background-color);
 	}
 
 	.heading {
